--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.2.0",
+    "sha.js": "^2.4.11",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/sha.js": "^2.4.0"
   }
 }
